--- a/Webpack/src/index.css
+++ b/Webpack/src/index.css
@@ -1,3 +1,12 @@
 .flex {
   display: flex;
 }
+.page-ft {
+  left: 0;
+  bottom: 0;
+  z-index: 9527;
+  width: 100%;
+  height: 60px;
+  border-radius: 20px 20px 0 0;
+  background-color: #f2f2f2;
+}
