--- a/Css/public.css
+++ b/Css/public.css
@@ -104,6 +104,7 @@ img {
   max-width: 100%;
   border: 0;
   vertical-align: top;
+  object-fit: cover;
 }
 
 a {
@@ -135,4 +136,12 @@ textarea:-ms-input-placeholder {
 input::-ms-input-placeholder,
 textarea::-ms-input-placeholder {
   color: #a0aec0;
+}
+
+/* 去掉默认边框和旁边的小图标 */
+input[type="search"] {
+  appearance: none;
+}
+input[type="search"]::-webkit-search-cancel-button{
+  display: none;
 }
