--- a/Css/index.css
+++ b/Css/index.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+:root {
+  --background: #ffffff;
+  --text: #414856;
+  --check: #4f29f0;
+  --disabled: #c3c8de;
+  --width: 100px;
+  --height: 140px;
+  --border-radius: 10px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -16,8 +26,8 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "PingFang SC",
-    "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC',
+    'Helvetica Neue', STHeiti, 'Microsoft Yahei', Tahoma, Simsun, sans-serif;
 }
 
 article,
@@ -80,7 +90,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
+  font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
     monospace;
 }
 
@@ -163,18 +173,90 @@ img {
   -webkit-touch-callout: none;
 }
 
-
 /* 清除火狐浏览器无图片时的边框 */
-img[src=""],
+img[src=''],
 img:not([src]) {
-  opacity:0;
+  opacity: 0;
 }
 
 /* 去掉默认边框和旁边的小图标 */
-input[type="search"] {
+input[type='search'] {
   appearance: none;
 }
 
-input[type="search"]::-webkit-search-cancel-button{
+input[type='search']::-webkit-search-cancel-button {
   display: none;
+}
+
+/* 指定可替换元素的内容应该如何适应到其使用的高度和宽度确定的框 */
+.cover {
+  object-fit: cover;
+}
+
+.text-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/*
+  screen 主要用于屏幕
+*/
+@media screen and (min-width: 1024px) {
+  article {
+    padding: 2px 4px;
+  }
+}
+
+/*
+    all 适用于所有设备
+  */
+@media all and (max-width: 680px) {
+  header {
+    font-size: 16px !important;
+  }
+}
+
+/*
+    逻辑操作符 and
+  */
+@media screen and (min-width: 20rem) and (orientation: landscape) {
+}
+
+/*
+    逻辑操作符 and
+  */
+@media (hover: hover) and (pointer: fine) {
+}
+
+/* 打印 */
+@media print {
+}
+
+/* 横屏 */
+@media screen and (orientation: landscape) {
+}
+
+/* 竖屏 */
+@media screen and (orientation: portrait) {
+}
+
+/* 窗口宽度<960,设计宽度=768 */
+@media screen and (max-width: 959px) {
+}
+
+/* 窗口宽度<768,设计宽度=640 */
+@media screen and (max-width: 767px) {
+}
+
+/* 窗口宽度<640,设计宽度=480 */
+@media screen and (max-width: 639px) {
+}
+
+/* 窗口宽度<480,设计宽度=320 */
+@media screen and (max-width: 479px) {
+}
+
+/* windows UI 贴靠 */
+@media screen and (-ms-view-state: snapped) {
 }
