--- a/frontend/webpack/src/index.scss
+++ b/frontend/webpack/src/index.scss
@@ -3,5 +3,9 @@
 }
 
 .box {
-  transform: translate3d(0, 10%, 10%);
+  width: 750px;
+  height: 978px;
+  background-image: url(./assets/img-1.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
