--- a/frontend/angular/app-project/src/app/app.component.html
+++ b/frontend/angular/app-project/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h3>Welcome Angular</h3>
+<!-- <h3>Welcome Angular</h3> -->
+<h1>{{ title }}</h1>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
+<app-messages></app-messages>
